Motion Tracker Ignoring Grease Pencil Mask #50908

Closed
opened 2017-03-10 10:10:48 +01:00 by Shepherd Duff · 5 comments

System Information
OS: Windows 10 Home - Version 1607
CPU: i7-5820K
GPU: GTX 970
RAM: 16GB DDR4-2400

Blender Version
Broken: 2.69 through 2.78c
Worked: 2.68

Short description of error
If I draw a mask for the tracker to use, it will ignore the mask. I can see the mask in the preview on the side, but it doesn't affect the track at all.

Exact steps for others to reproduce the error
Step 1: Find a clip where you would need to mask a track.
Step 2: Try to mask the track.

I uploaded a .zip containing a very small test clip and a blend file to go with it. You may have to re-link the footage.

I also made a very short video demonstrating how I used the clip and blend file to prove it was broken. https://youtu.be/DV3LJ5XjKxo

Bad Track.zip

**System Information** **OS:** Windows 10 Home - Version 1607 **CPU:** i7-5820K **GPU:** GTX 970 **RAM:** 16GB DDR4-2400 **Blender Version** Broken: 2.69 through 2.78c Worked: 2.68 **Short description of error** If I draw a mask for the tracker to use, it will ignore the mask. I can see the mask in the preview on the side, but it doesn't affect the track at all. **Exact steps for others to reproduce the error** Step 1: Find a clip where you would need to mask a track. Step 2: Try to mask the track. I uploaded a .zip containing a very small test clip and a blend file to go with it. You may have to re-link the footage. I also made a very short video demonstrating how I used the clip and blend file to prove it was broken. https://youtu.be/DV3LJ5XjKxo [Bad Track.zip](https://archive.blender.org/developer/F506405/Bad_Track.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Dekanuva

Added subscriber: @Dekanuva
Author

Something else that might be related to this bug:

The grease pencil is supposed to automatically be pink if you start drawing and there isn't already a layer on the tracker but when I draw a new mask in 2.78 it comes out black. This is a new development, since I tested it in 2.77 and it was still pink at that point.

Maybe the grease pencil updates have messed up the mask feature?

Something else that might be related to this bug: The grease pencil is supposed to automatically be pink if you start drawing and there isn't already a layer on the tracker but when I draw a new mask in 2.78 it comes out black. This is a new development, since I tested it in 2.77 and it was still pink at that point. Maybe the grease pencil updates have messed up the mask feature?
Sergey Sharybin self-assigned this 2017-03-20 12:15:23 +01:00

This issue was referenced by b0015686e2

This issue was referenced by b0015686e2e48a384a0b2a03a75f6daaad7271c0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50908
No description provided.